update to align with redesign-tiles2 branch

--- a/store/entities/features/withTiles/providers/daraa-tiles.yml
+++ b/store/entities/features/withTiles/providers/daraa-tiles.yml
@@ -28,7 +28,9 @@ caches:
     WorldMercatorWGS84Quad:
       min: 12
       max: 18
-layerDefaults:
+seeding:
+  maxThreads: 3
+tilesetDefaults:
   levels:
     WebMercatorQuad:
       min: 6
@@ -42,7 +44,7 @@ layerDefaults:
       min: 6
       max: 18
       default: 13
-layers:
+tilesets:
   __all__: 
     id: __all__
     combine: ['*']
