--- a/store/entities/features/withTiles/services/zoomstack.yml
+++ b/store/entities/features/withTiles/services/zoomstack.yml
@@ -42,9 +42,7 @@ api:
     title: 'OS Open Zoomstack as a GeoPackage'
 - buildingBlock: TILES
   enabled: true
-  tileProvider:
-    type: MBTILES
-    filename: OS_Open_Zoomstack.mbtiles
+  collectionTiles: false
 - buildingBlock: STYLES
   styleEncodings:
   - Mapbox
@@ -73,8 +71,6 @@ collections:
     - buildingBlock: SORTING
       included:
       - name 
-    - buildingBlock: TILES
-      enabled: false
   boundaries:
     id: boundaries
     label: boundaries
@@ -88,8 +84,6 @@ collections:
       enabled: false
     - buildingBlock: FEATURES_HTML
       itemLabelFormat: '{{type}}'
-    - buildingBlock: TILES
-      enabled: false
   contours:
     id: contours
     label: contours
@@ -105,8 +99,6 @@ collections:
     - buildingBlock: SORTING
       included:
       - height
-    - buildingBlock: TILES
-      enabled: false
   district_buildings:
     id: district_buildings
     label: district_buildings
@@ -116,8 +108,6 @@ collections:
       included:
         - geom
     - buildingBlock: SORTING
-      enabled: false
-    - buildingBlock: TILES
       enabled: false
   etl:
     id: etl
@@ -129,8 +119,6 @@ collections:
         - geom
     - buildingBlock: SORTING
       enabled: false
-    - buildingBlock: TILES
-      enabled: false
   foreshore:
     id: foreshore
     label: foreshore
@@ -140,8 +128,6 @@ collections:
       included:
         - geom
     - buildingBlock: SORTING
-      enabled: false
-    - buildingBlock: TILES
       enabled: false
   greenspace:
     id: greenspace
@@ -159,8 +145,6 @@ collections:
       itemLabelFormat: '{{type}}'
     - buildingBlock: HTML
       defaultStyle: NONE
-    - buildingBlock: TILES
-      enabled: false
   land:
     id: land
     label: land
@@ -173,8 +157,6 @@ collections:
       enabled: false
     - buildingBlock: HTML
       defaultStyle: NONE
-    - buildingBlock: TILES
-      enabled: false
   local_buildings:
     id: local_buildings
     label: local_buildings
@@ -191,8 +173,6 @@ collections:
       itemLabelFormat: '{{uuid}}'
     - buildingBlock: HTML
       defaultStyle: NONE
-    - buildingBlock: TILES
-      enabled: false
   names:
     id: names
     label: names
@@ -206,8 +186,6 @@ collections:
         - name2
         - name1language
         - name2language
-    - buildingBlock: TILES
-      enabled: false
     - buildingBlock: FEATURES_HTML
       itemLabelFormat: '{{name1}}{{name2 | prepend:'' / ''}}'
       transformations:
@@ -229,8 +207,6 @@ collections:
         - geom
     - buildingBlock: SORTING
       enabled: false
-    - buildingBlock: TILES
-      enabled: false
   rail:
     id: rail
     label: rail
@@ -245,8 +221,6 @@ collections:
         - type
     - buildingBlock: FEATURES_HTML
       itemLabelFormat: '{{type}}'
-    - buildingBlock: TILES
-      enabled: false
   railway_stations:
     id: railway_stations
     label: railway_stations
@@ -264,8 +238,6 @@ collections:
     - buildingBlock: SORTING
       included:
       - name
-    - buildingBlock: TILES
-      enabled: false
   roads_local:
     id: roads_local
     label: roads_local
@@ -286,8 +258,6 @@ collections:
       included:
       - name
       - number
-    - buildingBlock: TILES
-      enabled: false
   roads_national:
     id: roads_national
     label: roads_national
@@ -308,8 +278,6 @@ collections:
       included:
       - name
       - number
-    - buildingBlock: TILES
-      enabled: false
   roads_regional:
     id: roads_regional
     label: roads_regional
@@ -330,8 +298,6 @@ collections:
       included:
       - name
       - number
-    - buildingBlock: TILES
-      enabled: false
   sites:
     id: sites
     label: sites
@@ -346,8 +312,6 @@ collections:
         - type
     - buildingBlock: FEATURES_HTML
       itemLabelFormat: '{{type}}'
-    - buildingBlock: TILES
-      enabled: false
   surfacewater:
     id: surfacewater
     label: surfacewater
@@ -362,8 +326,6 @@ collections:
         - type
     - buildingBlock: FEATURES_HTML
       itemLabelFormat: '{{type}}'
-    - buildingBlock: TILES
-      enabled: false
   urban_areas:
     id: urban_areas
     label: urban_areas
@@ -378,8 +340,6 @@ collections:
         - type
     - buildingBlock: FEATURES_HTML
       itemLabelFormat: '{{type}}'
-    - buildingBlock: TILES
-      enabled: false
   waterlines:
     id: waterlines
     label: waterlines
@@ -394,8 +354,6 @@ collections:
         - type
     - buildingBlock: FEATURES_HTML
       itemLabelFormat: '{{type}}'
-    - buildingBlock: TILES
-      enabled: false
   woodland:
     id: woodland
     label: woodland
@@ -410,5 +368,3 @@ collections:
         - type
     - buildingBlock: FEATURES_HTML
       itemLabelFormat: '{{type}}'
-    - buildingBlock: TILES
-      enabled: false
