--- a/store/entities/features/withTiles/providers/strassen-tiles.yml
+++ b/store/entities/features/withTiles/providers/strassen-tiles.yml
@@ -24,17 +24,19 @@ caches:
   levels:
     WebMercatorQuad:
       min: 11
-      max: 12
+      max: 14
     gdi_de_25832:
       min: 6
-      max: 8
+      max: 10
     AdV_25832:
       min: 6
-      max: 8
+      max: 10
     EU_25832:
-      min: 8
-      max: 8
-layerDefaults:
+      min: 6
+      max: 10
+seeding:
+  maxThreads: 3
+tilesetDefaults:
   levels:
     WebMercatorQuad:
       min: 4
@@ -52,7 +54,7 @@ layerDefaults:
       min: 0
       max: 10
       default: 4
-layers:
+tilesets:
   __all__: 
     id: __all__
     combine: ['*']
