--- a/store/entities/features/withTiles/providers/vineyards-tiles.yml
+++ b/store/entities/features/withTiles/providers/vineyards-tiles.yml
@@ -16,15 +16,32 @@ caches:
     WebMercatorQuad:
       min: 13
       max: 18
-layerDefaults:
-  levels:
-    WebMercatorQuad:
-      min: 5
-      max: 16
-layers:
-  __all__: 
-    id: __all__
-    combine: ['*']
+seeding:
+  maxThreads: 2
+tilesets:
   vineyards:
     id: vineyards
-
+    levels:
+      WebMercatorQuad:
+        min: 5
+        max: 18
+    transformations:
+      WebMercatorQuad:
+      - min: 5
+        max: 7
+        merge: true
+        groupBy:
+        - region
+      - min: 8
+        max: 8
+        merge: true
+        groupBy:
+        - region
+        - subregion
+      - min: 9
+        max: 9
+        merge: true
+        groupBy:
+        - region
+        - subregion
+        - cluster
