--- a/store/entities/features/withTiles/providers/strassen-tiles.yml
+++ b/store/entities/features/withTiles/providers/strassen-tiles.yml
@@ -37,23 +37,26 @@ caches:
 seeding:
   maxThreads: 3
 tilesetDefaults:
+  center:
+    lon: 7.0
+    lat: 51.0
   levels:
     WebMercatorQuad:
       min: 4
       max: 14
-      default: 8
+      default: 10
     gdi_de_25832:
       min: 0
       max: 10
-      default: 4
+      default: 6
     AdV_25832:
       min: 0
       max: 10
-      default: 4
+      default: 6
     EU_25832:
       min: 0
       max: 10
-      default: 4
+      default: 6
 tilesets:
   __all__: 
     id: __all__
