--- a/store/entities/features/withTiles/services/cologne_lod2.yml
+++ b/store/entities/features/withTiles/services/cologne_lod2.yml
@@ -146,7 +146,7 @@ collections:
       included:
       - name
       - measuredHeight
-      #- storeysAboveGround
+      - storeysAboveGround
     - buildingBlock: JSON_FG
       featureType: 
       - Building
