add pre-defined tile matrix sets
These are not added automatically from the tile provider information.

--- a/store/entities/features/withTiles/services/daraa.yml
+++ b/store/entities/features/withTiles/services/daraa.yml
@@ -47,6 +47,12 @@ api:
   - Mapbox
   - HTML
   - 'SLD 1.0'
+- buildingBlock: TILE_MATRIX_SETS
+  enabled: true
+  includePredefined:
+  - WebMercatorQuad
+  - WorldCRS84Quad
+  - WorldMercatorWGS84Quad
 - buildingBlock: TILES
   enabled: true
   # mapClientType: OPEN_LAYERS
