--- a/store/entities/features/withTiles/services/strassen.yml
+++ b/store/entities/features/withTiles/services/strassen.yml
@@ -45,6 +45,13 @@ api:
 - buildingBlock: TILES
   enabled: true
   # mapClientType: OPEN_LAYERS
+- buildingBlock: TILE_MATRIX_SETS
+  enabled: true
+  includePredefined:
+  - WebMercatorQuad
+  - AdV_25832
+  - EU_25832
+  - gdi_de_25832
 - buildingBlock: STYLES
   enabled: true
   resourcesEnabled: false
