fix link errors

--- a/store/entities/features/withTiles/services/cologne_lod2.yml
+++ b/store/entities/features/withTiles/services/cologne_lod2.yml
@@ -120,6 +120,8 @@ api:
   enabled: false
 - buildingBlock: CSV
   enabled: false
+- buildingBlock: SCHEMA
+  enabled: false
 collections:
   building:
     id: building
