--- a/store/entities/features/providers/cshapes.yml
+++ b/store/entities/features/providers/cshapes.yml
@@ -27,6 +27,7 @@ types:
         sourcePath: fid
         type: INTEGER
         role: ID
+        scope: QUERIES
       name:
         label: Country name
         sourcePath: cntry_name
